--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,14 @@
-body{
-  background-color:#040304 ;
-  color: white;
-}
-
-.homeBg{
+.homeBg {
   background: url('https://cdn.discordapp.com/attachments/780837848030380112/929812133288493086/cover_image.png');
-  background-position:center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-  width:'100wv'
+  width: '100wv'
 }
-.home{
-  display:flex;
+
+.home {
+  display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
@@ -21,59 +17,67 @@ body{
   flex-direction: column;
 }
 
-.home h1{
+.home h1 {
   font-size: 3.125rem;
   color: white;
 }
 
-.home input{
-  text-align: left;
+.home input {
+  text-align: center;
   font-size: 16px;
   width: 26%;
   padding: 10px 40px;
 }
 
-.home button{
-  background:#f40612;
+.home button {
+  background: #f40612;
   font-size: 26px;
   border: none;
   padding: 8px 30px;
   margin-top: 8px;
   border-radius: 4px;
 }
-.home button a{
+
+.home button a {
   text-decoration: none;
   color: white;
 }
-.movieCardTitle{
+
+.movieCardTitle {
   text-align: center;
   font-size: 1rem;
 }
 
-.movieCardImg{
+.movieCardImg {
   width: 12rem;
   height: auto;
   display: flex;
   margin: auto;
 }
 
-.movieCardLink{
+.movieCardLink {
   color: white;
   text-decoration: none;
 }
-.movieCard{
+
+.movieCard {
   border-radius: 8px;
   border: 2px solid black;
   width: 20%;
   margin: 4px;
 }
-.movieCards{
+
+.movieCards {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
 }
 
+ body {
+  background-color: #040304;
+  color: white;
+}
 
 .coverImg{
   width:auto;
@@ -86,7 +90,7 @@ body{
   position: relative;
   bottom: 8rem;
 }
-
+ 
 .movieContainer{
   width:80%;
   margin: auto;
@@ -141,7 +145,7 @@ top: 8rem;
   margin: 2rem 5rem;
   }
   .castHeading{
-  
+ 
   letter-spacing: 4px;
   }
   .castName{
@@ -163,7 +167,7 @@ top: 8rem;
   color: white;
   text-decoration: none;
   }
-
+ 
   .actorLink{
     text-decoration: none;
   }
